--- a/package.json
+++ b/package.json
@@ -94,9 +94,10 @@
       "add-dist-header": "~1.2",
       "assert-deep-strict-equal": "~1.1",
       "csso-cli": "~4.0",
-      "eslint": "~8.46",
+      "eslint": "~8.47",
       "jshint": "~2.13",
       "less": "~4.2",
+      "make-dir-cli": "~3.1",
       "mocha": "~10.2",
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
