--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "recursive-exec",
-   "version": "0.0.3",
+   "version": "0.0.4",
    "description": "Run a command on each file in a folder and its subfolders (CLI tool designed for use in npm scripts)",
    "license": "MIT",
    "type": "module",
@@ -68,15 +68,17 @@
       "clean": [
          "rimraf build dist spec/fixtures/target"
       ],
-      "build": [
+      "lint": [
          "jshint . --exclude-path .gitignore",
-         "eslint --max-warnings 0 . --ext .ts",
+         "eslint --max-warnings 0 . --ext .ts"
+      ],
+      "build": [
          "tsc",
          "add-dist-header build dist"
       ]
    },
    "scripts": {
-      "pretest": "run-scripts clean build",
+      "pretest": "run-scripts clean lint build",
       "test": "mocha spec/*.spec.js --timeout 7000"
    },
    "dependencies": {
@@ -88,9 +90,9 @@
    },
    "devDependencies": {
       "@types/fancy-log": "~2.0",
-      "@types/node": "~20.4",
-      "@typescript-eslint/eslint-plugin": "~6.3",
-      "@typescript-eslint/parser": "~6.3",
+      "@types/node": "~20.5",
+      "@typescript-eslint/eslint-plugin": "~6.4",
+      "@typescript-eslint/parser": "~6.4",
       "add-dist-header": "~1.2",
       "assert-deep-strict-equal": "~1.1",
       "csso-cli": "~4.0",
