--- a/package.json
+++ b/package.json
@@ -88,19 +88,19 @@
       "chalk": "~5.3",
       "cli-argv-util": "~1.2",
       "fancy-log": "~2.0",
-      "glob": "10.3.6",
+      "glob": "~10.3",
       "slash": "~5.1"
    },
    "devDependencies": {
       "@types/fancy-log": "~2.0",
-      "@types/node": "~20.6",
+      "@types/node": "~20.8",
       "@typescript-eslint/eslint-plugin": "~6.7",
       "@typescript-eslint/parser": "~6.7",
       "add-dist-header": "~1.3",
       "assert-deep-strict-equal": "~1.1",
       "copy-file-util": "~1.1",
       "csso-cli": "~4.0",
-      "eslint": "~8.50",
+      "eslint": "~8.51",
       "jshint": "~2.13",
       "less": "~4.2",
       "make-dir-cli": "~3.1",
