--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
    "name": "recursive-exec",
    "version": "1.0.0",
-   "description": "Run a command on each file in a folder and its subfolders (CLI tool designed for use in npm scripts)",
+   "description": "Run a command on each file in a folder and its subfolders (CLI tool designed for use in npm package.json scripts)",
    "license": "MIT",
    "type": "module",
    "module": "dist/recursive-exec.js",
-   "main": "dist/recursive-exec.js",
    "types": "dist/recursive-exec.d.ts",
+   "exports": "./dist/recursive-exec.js",
    "files": [
       "dist"
    ],
-   "exports": {
-      ".": {
-         "import": "./dist/recursive-exec.js"
-      },
-      "./": "./dist/"
-   },
    "bin": {
       "recursive-exec": "bin/cli.js"
    },
@@ -93,9 +87,9 @@
    },
    "devDependencies": {
       "@types/fancy-log": "~2.0",
-      "@types/node": "~20.10",
-      "@typescript-eslint/eslint-plugin": "~6.17",
-      "@typescript-eslint/parser": "~6.17",
+      "@types/node": "~20.11",
+      "@typescript-eslint/eslint-plugin": "~6.19",
+      "@typescript-eslint/parser": "~6.19",
       "add-dist-header": "~1.3",
       "assert-deep-strict-equal": "~1.1",
       "copy-file-util": "~1.1",
