--- a/package.json
+++ b/package.json
@@ -87,21 +87,21 @@
    },
    "devDependencies": {
       "@types/fancy-log": "~2.0",
-      "@types/node": "~20.11",
-      "@typescript-eslint/eslint-plugin": "~6.19",
-      "@typescript-eslint/parser": "~6.19",
-      "add-dist-header": "~1.3",
-      "assert-deep-strict-equal": "~1.1",
-      "copy-file-util": "~1.1",
+      "@types/node": "~20.12",
+      "@typescript-eslint/eslint-plugin": "~7.9",
+      "@typescript-eslint/parser": "~7.9",
+      "add-dist-header": "~1.4",
+      "assert-deep-strict-equal": "~1.2",
+      "copy-file-util": "~1.2",
       "csso-cli": "~4.0",
-      "eslint": "~8.56",
+      "eslint": "8.57.0",
       "jshint": "~2.13",
       "less": "~4.2",
-      "make-dir-cli": "~3.1",
-      "mocha": "~10.2",
+      "make-dir-cli": "~4.0",
+      "mocha": "~10.4",
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
-      "typescript": "~5.3",
+      "typescript": "~5.4",
       "uglify-js": "~3.17"
    }
 }
