--- a/package.json
+++ b/package.json
@@ -82,14 +82,13 @@
       "chalk": "~5.3",
       "cli-argv-util": "~1.2",
       "fancy-log": "~2.0",
-      "glob": "~10.3",
+      "glob": "~10.4",
       "slash": "~5.1"
    },
    "devDependencies": {
+      "@eslint/js": "~9.3",
       "@types/fancy-log": "~2.0",
       "@types/node": "~20.12",
-      "@typescript-eslint/eslint-plugin": "~7.9",
-      "@typescript-eslint/parser": "~7.9",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
@@ -102,6 +101,7 @@
       "rimraf": "~5.0",
       "run-scripts-util": "~1.2",
       "typescript": "~5.4",
+      "typescript-eslint": "~7.11",
       "uglify-js": "~3.17"
    }
 }
