--- a/package.json
+++ b/package.json
@@ -42,32 +42,13 @@
       "node": true,
       "mocha": true
    },
-   "eslintConfig": {
-      "ignorePatterns": [
-         "build",
-         "dist",
-         "node_modules"
-      ],
-      "root": true,
-      "parser": "@typescript-eslint/parser",
-      "plugins": [
-         "@typescript-eslint"
-      ],
-      "extends": [
-         "eslint:recommended",
-         "plugin:@typescript-eslint/recommended"
-      ],
-      "rules": {
-         "@typescript-eslint/no-non-null-assertion": "off"
-      }
-   },
    "runScriptsConfig": {
       "clean": [
          "rimraf build dist spec/fixtures/target"
       ],
       "lint": [
          "jshint . --exclude-path .gitignore",
-         "eslint --max-warnings 0 . --ext .ts"
+         "eslint --max-warnings 0"
       ],
       "build": [
          "tsc",
@@ -82,26 +63,26 @@
       "chalk": "~5.3",
       "cli-argv-util": "~1.2",
       "fancy-log": "~2.0",
-      "glob": "~10.4",
+      "glob": "~11.0",
       "slash": "~5.1"
    },
    "devDependencies": {
-      "@eslint/js": "~9.3",
+      "@eslint/js": "~9.9",
       "@types/fancy-log": "~2.0",
-      "@types/node": "~20.12",
+      "@types/node": "~22.2",
       "add-dist-header": "~1.4",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.2",
       "csso-cli": "~4.0",
-      "eslint": "8.57.0",
+      "eslint": "~9.9",
       "jshint": "~2.13",
       "less": "~4.2",
       "make-dir-cli": "~4.0",
-      "mocha": "~10.4",
-      "rimraf": "~5.0",
-      "run-scripts-util": "~1.2",
-      "typescript": "~5.4",
-      "typescript-eslint": "~7.11",
-      "uglify-js": "~3.17"
+      "mocha": "~10.7",
+      "rimraf": "~6.0",
+      "run-scripts-util": "~1.3",
+      "typescript": "~5.5",
+      "typescript-eslint": "~8.1",
+      "uglify-js": "~3.19"
    }
 }
