--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
    },
    "runScriptsConfig": {
       "clean": [
-         "rimraf build dist spec/fixtures/target"
+         "rimraf build dist spec/target"
       ],
       "lint": [
          "jshint . --exclude-path .gitignore",
@@ -67,19 +67,19 @@
       "slash": "~5.1"
    },
    "devDependencies": {
-      "@eslint/js": "~9.38",
+      "@eslint/js": "~9.39",
       "@types/fancy-log": "~2.0",
-      "@types/node": "~24.9",
+      "@types/node": "~24.10",
       "add-dist-header": "~1.5",
       "assert-deep-strict-equal": "~1.2",
       "copy-file-util": "~1.3",
       "csso-cli": "~4.0",
-      "eslint": "~9.38",
+      "eslint": "~9.39",
       "jshint": "~2.13",
       "less": "~4.4",
       "make-dir-cli": "~4.0",
       "mocha": "~11.7",
-      "rimraf": "~6.0",
+      "rimraf": "~6.1",
       "run-scripts-util": "~1.3",
       "typescript": "~5.9",
       "typescript-eslint": "~8.46",
