--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
       "commands": {
          "make-dir": "make-dir spec/target/js-macro/{{path}}",
          "uglifyjs": "uglifyjs {{file}} --output spec/target/js-macro/{{basename}}.min.js"
-
       }
    },
    "runScriptsConfig": {
@@ -70,7 +69,7 @@
       "chalk": "~5.6",
       "cli-argv-util": "~1.3",
       "fancy-log": "~2.0",
-      "glob": "~12.0",
+      "glob": "~13.0",
       "slash": "~5.1"
    },
    "devDependencies": {
@@ -82,6 +81,7 @@
       "copy-file-util": "~1.3",
       "csso-cli": "~4.0",
       "eslint": "~9.39",
+      "glob-bin": "~1.0",
       "jshint": "~2.13",
       "less": "~4.4",
       "make-dir-cli": "~4.0",
@@ -89,7 +89,7 @@
       "rimraf": "~6.1",
       "run-scripts-util": "~1.3",
       "typescript": "~5.9",
-      "typescript-eslint": "~8.47",
+      "typescript-eslint": "~8.48",
       "uglify-js": "~3.19"
    }
 }
